--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gh-pages": "^6.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet": "^6.1.0",
     "react-lazyload": "^3.2.1",
     "sass": "^1.81.0"
   },
@@ -29,6 +30,7 @@
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-helmet": "^6.1.11",
     "@types/react-lazyload": "^3.2.3",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.15.0",
